<resources>
    <string name="app_name">Kinopoisk</string>
    <string name="popular">Популярное</string>
    <string name="favorite">Избранное</string>

    <string name="try_again">Повторить</string>
    <string name="no_connection">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>

    <string name="film_title">Изгой-один: Звёздные войны</string>
    <string name="film_description">Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики</string>
    <string name="film_geners">Жанры: фантастика, приключения</string>
    <string name="film_countries">Страны: США</string>

</resources>