<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmCardActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="300dp"
        android:layout_height="474dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tvFilmTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/tvFilmTitle"
        android:layout_width="375dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="160dp"
        android:text="@string/film_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFilmDescription"
        android:layout_width="375dp"
        android:layout_height="91dp"
        android:layout_marginTop="5dp"
        android:text="@string/film_description"
        app:layout_constraintEnd_toEndOf="@+id/tvFilmTitle"
        app:layout_constraintStart_toStartOf="@+id/tvFilmTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvFilmTitle" />

    <TextView
        android:id="@+id/tvFilmGeners"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/film_geners"
        app:layout_constraintEnd_toEndOf="@+id/tvFilmDescription"
        app:layout_constraintStart_toStartOf="@+id/tvFilmDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvFilmDescription" />

    <TextView
        android:id="@+id/tvFilmCountries"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/film_countries"
        app:layout_constraintEnd_toEndOf="@+id/tvFilmGeners"
        app:layout_constraintStart_toStartOf="@+id/tvFilmGeners"
        app:layout_constraintTop_toBottomOf="@+id/tvFilmGeners" />

</androidx.constraintlayout.widget.ConstraintLayout>